# climage

./: .gitignore  .pre-commit-config.yaml  .stylua.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: stylua.yml
docs/: ARCHTECTURE.md  ROADMAP.md
lua/: climage.lua
lua/climage/: climage.lua  logs.lua
python/: worker.py
tests/: test_smokey.py
